Terraform/code/day-3/sg.tf
data "aws_vpc" "default" {
    default = true
}


resource "aws_security_group" "security_group" {
    name = "${var.project}-${var.env}-sg"
    description = "New Security Group"
    vpc_id = data.aws_vpc.default.id
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }           
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
